# spec_doc_validator

./: LICENSE  README.md  claude.md  pyproject.toml
.claude/commands/: list-specs.md  load-spec.md  report.md  specval-list.md  specval-load.md  specval-report.md  specval-validate.md  specval.md  validate.md
examples/: sample_data.csv  sample_spec.md
spec_validator/: __init__.py  __main__.py  cli.py  config.py
spec_validator/models/: spec.py  validation.py
spec_validator/parsers/: base.py  data_parser.py  excel_parser.py  markdown_parser.py  word_parser.py
spec_validator/registry/: spec_registry.py
spec_validator/reporters/: json_reporter.py  rich_reporter.py
spec_validator/validators/: claude_validator.py  prompt_cache.py
tests/: test_parsers.py  test_validators.py
